--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
       <div class="container">
         <h1></h1>
-        <img src="https://cdn.discordapp.com/attachments/890259839689818122/1067157445186687006/Green_Ivory_Abstract_Illustration_Climate_Change_Poster.png" width="1000" height="1600">
+        <img src="https://i.ibb.co/vzZg432/Green-Ivory-Abstract-Illustration-Climate-Change-Poster.png" width="1000" height="1600">
           <div class="date">
         <p>
        </p>
